[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Tower.gd" type="Script" id=2]
[ext_resource path="res://World/Towers/icetower-Sheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.2295, 25.5718 )

[sub_resource type="CircleShape2D" id=2]
radius = 201.193

[node name="IceTower" type="StaticBody2D"]
script = ExtResource( 2 )
Projectile = ExtResource( 1 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 22.4151, -50.4163 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.22301, -24.4784 )
texture = ExtResource( 3 )
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Range" type="Area2D" parent="."]
visible = false

[node name="RangeSphere" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
